--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "primeicons": "^5.0.0",
     "primevue": "^3.17.0",
     "sass": "^1.54.9",
+    "swiper": "^8.4.2",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
