--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "firebase": "^9.13.0",
     "pinia": "^2.0.21",
     "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
